--- a/login.html
+++ b/login.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>大事件 登录/注册</title>
-    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-    <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="./assets/css/login.css">
 </head>
 
 <body>
     <!-- 大事件logo -->
     <div class="layui-main">
-        <img class="logoimg" src="/assets/images/logo.png" alt="logo">
+        <img class="logoimg" src="./assets/images/logo.png" alt="logo">
     </div>
     <!-- 登录注册区域 -->
     <div class="loginAndRegbox">
@@ -30,7 +30,7 @@
                 <!-- 密码 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
-                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+                    <input type="password" name="password" required lay-verify="required|password" placeholder="请输入密码" autocomplete="off" class="layui-input" />
                 </div>
                 <!-- 登录按钮 -->
                 <div class="layui-form-item">
@@ -55,11 +55,11 @@
                 <!-- 密码 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
-                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+                    <input type="password" name="password" required lay-verify="required|password" placeholder="请输入密码" autocomplete="off" class="layui-input" />
                 </div>
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
-                    <input type="password" name="repassword" required lay-verify="required" placeholder="请再次确认密码" autocomplete="off" class="layui-input" />
+                    <input type="password" name="repassword" required lay-verify="required|repassword" placeholder="请再次确认密码" autocomplete="off" class="layui-input" />
                 </div>
                 <!-- 注册按钮 -->
                 <div class="layui-form-item">
@@ -75,10 +75,12 @@
 
         </div>
     </div>
+    <!-- 导入layui文件 -->
+    <script src="./assets/lib/layui/layui.all.js"></script>
     <!-- 导入jquery文件 -->
-    <script src="/assets/lib/jquery.js"></script>
+    <script src="./assets/lib/jquery.js"></script>
     <!-- 导入自己的login文件 -->
-    <script src="/assets/js/login.js"></script>
+    <script src="./assets/js/login.js"></script>
 </body>
 
 </html>
