登录注册完成

--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         <!-- 登录的div -->
         <div class="login-box">
             <!-- 登录的表单 -->
-            <form class="layui-form" action="">
+            <form class="layui-form" id="form_login">
                 <!-- 用户名 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i>
@@ -46,7 +46,7 @@
         <!-- 注册的div -->
         <div class="reg-box">
             <!-- 注册的表单 -->
-            <form class="layui-form" action="">
+            <form class="layui-form" id="form_reg">
                 <!-- 用户名 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i>
@@ -67,9 +67,7 @@
                     <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>立即注册</button>
                 </div>
                 <div class="layui-form-item links">
-                    <a href="javascript:;" id='link_login'>
-                                    去登陆
-                                </a>
+                    <a href="javascript:;" id='link_login'>去登陆</a>
                 </div>
             </form>
 
@@ -79,6 +77,8 @@
     <script src="./assets/lib/layui/layui.all.js"></script>
     <!-- 导入jquery文件 -->
     <script src="./assets/lib/jquery.js"></script>
+    <script src="./assets/js/baseApi.js"></script>
+
     <!-- 导入自己的login文件 -->
     <script src="./assets/js/login.js"></script>
 </body>
