完成了后台主页

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <dd><a href="">设置密码</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href=""><span class="iconfont icon-tuichu"></span>退出</a></li>
+                <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span class="iconfont icon-tuichu"></span>退出</a></li>
             </ul>
         </div>
 
@@ -80,6 +80,9 @@
     </div>
 
     <script src="./assets/lib/layui/layui.all.js"></script>
+    <script src="./assets/lib/jquery.js"></script>
+    <script src="./assets/js/baseApi.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
