--- a/article/art_list.html
+++ b/article/art_list.html
@@ -66,6 +66,7 @@
                 </tbody>
             </table>
             <!-- 分页区 -->
+            <div id="pageBox"></div>
         </div>
     </div>
     <script type="text/html" id='tpl-table'>
