--- a/article/art_list.html
+++ b/article/art_list.html
@@ -77,7 +77,7 @@
             <td>{{$value.pub_date|dataFormat}}</td>
             <td>{{$value.state}}</td>
             <td><button type="button" class="layui-btn layui-btn-xs">编辑</button>
-                <button type="button" class="layui-btn  layui-btn-danger layui-btn-xs">删除</button></td>
+                <button type="button" data-id="{{$value.Id}}" class="layui-btn  layui-btn-danger layui-btn-xs delete-btn">删除</button></td>
         </tr>
 
         {{/each}}
